fix(a11y): Fix code block contrast in light-mode
- Slightly darker block background colour
- Tweaked two text colours to improve contrast

--- a/public/theme.css
+++ b/public/theme.css
@@ -71,7 +71,7 @@
 	--theme-bg-accent: hsla(var(--color-orange), var(--theme-accent-opacity));
 	--theme-code-inline-bg: hsla(var(--color-gray-95), 1);
 	--theme-code-inline-text: var(--theme-text);
-	--theme-code-bg: hsla(217, 19%, 27%, 1);
+	--theme-code-bg: hsla(257, 31%, 22%, 1);
 	--theme-code-text: hsla(var(--color-gray-95), 1);
 	--theme-navbar-bg: #fdfeff;
 	--theme-navbar-height: 6rem;
